--- a/themes/greatermedia/assets/css/sass/greater_media.scss
+++ b/themes/greatermedia/assets/css/sass/greater_media.scss
@@ -65,6 +65,7 @@
 @import "components/adblock";
 @import "components/related-posts";
 @import "components/404";
+@import "components/mobile-podcasts";
 
 // Custom styles only used on single pages
 @import "pages/single";
